--- a/apitest/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
+++ b/apitest/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
@@ -99,7 +99,7 @@ SearchMachine:
       endPoint: /v1/masterdata/machines/search
       description: Search for machine details with the condition that the column MacAdress equals the specified filter type
       role: globalAdmin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
@@ -143,7 +143,7 @@ SearchMachine:
       endPoint: /v1/masterdata/machines/search
       description: Search for machine details with the condition that the column MacAddress contains the specified type
       role: globalAdmin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
@@ -187,7 +187,7 @@ SearchMachine:
       endPoint: /v1/masterdata/machines/search
       description: Search for machine details with the condition that the column MacAddress starts with the specified type
       role: globalAdmin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
@@ -494,7 +494,7 @@ SearchMachine:
       endPoint: /v1/masterdata/machines/search
       description: Search for machine details with two sort fields and two descending orders
       role: globalAdmin
-      templateFields: ["value"]
+      templateFields: ["languageCode"]
       restMethod: post
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
