MOSIP-35082 - Fixing non English failure test cases
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/LocationController/CreateLocationData.yml
+++ b/apitest/src/main/resources/masterdata/LocationController/CreateLocationData.yml
@@ -1,10 +1,10 @@
 CreateLocationData:
-   MasterData_CreateLocationData_All_Valid_Smoke_Sid:
+   MasterData_CreateLocationData_WithMandatoryLanguage_All_Valid_Smoke_Sid:
       endPoint: /v1/masterdata/locations
       description: Creating location data with valid details
       role: admin
       checkErrorsOnlyInResponse: true
-      templateFields: ["name","langCode"]
+      templateFields: ["name"]
       restMethod: post
       inputTemplate: masterdata/LocationController/locationData
       outputTemplate: masterdata/LocationController/locationDataResult
