--- a/apitest/src/main/resources/masterdata/LocationController/CreateLocationData.yml
+++ b/apitest/src/main/resources/masterdata/LocationController/CreateLocationData.yml
@@ -1,9 +1,9 @@
 CreateLocationData:
-   MasterData_CreateLocationData_All_Valid_Smoke_Sid:
+   MasterData_CreateLocationData_WithMandatoryLanguage_All_Valid_Smoke_Sid:
       endPoint: /v1/masterdata/locations
       role: admin
       checkErrorsOnlyInResponse: true
-      templateFields: ["name","langCode"]
+      templateFields: ["name"]
       restMethod: post
       inputTemplate: masterdata/LocationController/locationData
       outputTemplate: masterdata/LocationController/locationDataResult
