--- a/apitest/src/main/resources/masterdata/FetchValidDocuments/FetchValidDocuments.yml
+++ b/apitest/src/main/resources/masterdata/FetchValidDocuments/FetchValidDocuments.yml
@@ -1,6 +1,6 @@
 FetchValidDocuments:
    MasterData_FetchValidDocuments_allValid_smoke_with_lang:
-      endPoint: /v1/masterdata/validdocuments/{languagecode}
+      endPoint: /v1/masterdata/validdocuments/{languageCode}
       description: Retrieve valid Documents By languagecode with all valid data
       role: admin
       checkErrorsOnlyInResponse: true
