MOSIP-35082 - Fixed failure test cases
Signed-off-by: Mohanachandran S <165888272+mohanachandran-s@users.noreply.github.com>

--- a/apitest/src/main/resources/masterdata/UserCenterMapping/UpdateUserCenterMapping.yml
+++ b/apitest/src/main/resources/masterdata/UserCenterMapping/UpdateUserCenterMapping.yml
@@ -19,7 +19,7 @@ UpdateUserCenterMapping:
     "name": "automationUpdated",
     "statusCode": "active",
     "regCenterId": "$IGNORE$",
-    "zoneCode": "RBT",
+    "zoneCode": "$IGNORE$",
     "zoneName": "$IGNORE$",
     "regCenterName": "HSR Center updated"
     }'
