--- a/apitest/pom.xml
+++ b/apitest/pom.xml
@@ -265,4 +265,16 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	
+	<dependencies>
+
+		<dependency>
+			<groupId>io.mosip.testrig.apirig.apitest.commons</groupId>
+			<artifactId>apitest-commons</artifactId>
+			<version>1.2.2-SNAPSHOT</version>
+		</dependency>
+		
+	</dependencies>
+	
 </project>
