MOSIP-35897 - Fixed failure testcase and added delete location api
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/GetDeviceHistory/GetDeviceHistory.yml
+++ b/apitest/src/main/resources/masterdata/GetDeviceHistory/GetDeviceHistory.yml
@@ -2,7 +2,7 @@ GetDeviceHistory:
    Masterdata_GetDeviceHistory_allValid_smoke:
       endPoint: /v1/masterdata/deviceshistories/{id}/{langcode}/{effdatetimes}
       description: Retrieve device history details based on ID, language code, and effective times
-      role: regproc
+      role: admin
       templateFields: ["langCode"]
       restMethod: get
       inputTemplate: masterdata/GetDeviceHistory/getDeviceHistory
