[DSD-6308] Update push-trigger.yml for docker img of CRE
Signed-off-by: VSIVAKALYAN <103260988+VSIVAKALYAN@users.noreply.github.com>

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -20,7 +20,7 @@ on:
       - 1.*
       - develop*
       - MOSIP*
-
+      - DSD*
 jobs:
   build-maven-admin-services:
     uses: mosip/kattu/.github/workflows/maven-build.yml@master-java21
