MOSIP-35897 - Fixed automation failures
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/apitest/src/main/resources/masterdata/Device/UpdateDevice.yml
+++ b/apitest/src/main/resources/masterdata/Device/UpdateDevice.yml
@@ -27,7 +27,7 @@ UpdateDevice:
 	"isActive": "$IGNORE$",
 	"macAddress": "D4-3D-7E-C0-8C-4A",
 	"zoneCode": "$IGNORE$",
-	"validityDateTime": "$TIMESTAMP$",
+	"validityDateTime": "$IGNORE$",
 	"serialNum": "ceec5f62-77b7-46f3-816b-3e734305a9c8",
 	"requesttime": "$TIMESTAMP$"
 }'
@@ -59,7 +59,7 @@ UpdateDevice:
 	"isActive": "$IGNORE$",
 	"macAddress": "D4-3D-7E-C0-8C-4A",
 	"zoneCode": "$IGNORE$",
-	"validityDateTime": "$TIMESTAMP$",
+	"validityDateTime": "$IGNORE$",
 	"serialNum": "ceec5f62-77b7-46f3-816b-3e734305a9c8",
 	"requesttime": "$TIMESTAMP$"
 }'
