--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -108,11 +108,11 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<kernel.applicant-type.version>1.3.0-SNAPSHOT</kernel.applicant-type.version>
-		<kernel.logger.logback.version>1.3.0-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.applicant-type.version>1.3.0-beta.1</kernel.applicant-type.version>
+		<kernel.logger.logback.version>1.3.0-beta.1</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
-		<kernel.websubclient.api.version>1.3.0-SNAPSHOT</kernel.websubclient.api.version>
-		<kernel.version>1.3.0-SNAPSHOT</kernel.version>
+		<kernel.websubclient.api.version>1.3.0-beta.1</kernel.websubclient.api.version>
+		<kernel.version>1.3.0-beta.1</kernel.version>
 	</properties>
 
 	<repositories>
@@ -160,7 +160,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-openid-bridge-api</artifactId>
-			<version>${kernel.version}</version>
+			<version>1.3.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
