--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -171,7 +171,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.3.0-SNAPSHOT</version>
+				<version>1.3.0-beta.1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -199,7 +199,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>1.3.0-beta.1</version>
 		</dependency>
 
 	</dependencies>
