MOSIP-35956 uniqueIdentifier for masterData
Signed-off-by: NitinHegde <nitin.k@cyberpwn.com>

--- a/api-test/src/main/resources/masterdata/GetRegistrationMachineUserMappingHistory/GetRegistrationMachineUserMappingHistory.yml
+++ b/api-test/src/main/resources/masterdata/GetRegistrationMachineUserMappingHistory/GetRegistrationMachineUserMappingHistory.yml
@@ -15,12 +15,12 @@ GetRegistrationMachineUserMappingHistory:
       "userid":"$ID:CreateZoneUser_All_Valid_Smoke_Sid_userId$"
 }'
       output: '{
-"registrationCenters": [{
-        "cntrId": "$IGNORE$",
-        "machineId": "$IGNORE$",
-        "usrId": "$IGNORE$",
+   "registrationCenters": [{
+        "cntrId": "$ID:CreateRegCenter_allValid_smoke_sid_id$",
+        "machineId": "$ID:CreateMachine_All_Valid_Smoke_sid_id$",
+        "usrId": "masterdata-220005",
         "isActive": "$IGNORE$",
         "langCode": "$IGNORE$",
         "effectivetimes": "$IGNORE$"
     }]
-}'  
+}'
