--- a/api-test/src/main/resources/masterdata/Device/CreateDevice.yml
+++ b/api-test/src/main/resources/masterdata/Device/CreateDevice.yml
@@ -28,7 +28,7 @@ CreateDevice:
 	"isActive": false,
 	"macAddress": "D4-3D-7E-C0-8C-4A",
 	"zoneCode": "$IGNORE$",
-	"validityDateTime": "$TIMESTAMP$",
+	"validityDateTime": "$IGNORE$",
 	"serialNum": "ceec5f62-77b7-46f3-816b-3e734305a9c8",
 	"requesttime": "$TIMESTAMP$"
 }'
@@ -50,7 +50,7 @@ CreateDevice:
 	"langCode": "eng",
 	"macAddress": "D4-3D-7E-C0-8C-4A",
 	"zoneCode": "$ZONE_CODE$",
-	"validityDateTime": "$TIMESTAMP$",
+	"validityDateTime": "$IGNORE$",
 	"serialNum": "ceec5f62-77b7-46f3-816b-3e734305a9c8",
 	"requesttime": "$TIMESTAMP$"
 	}'
