--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -17,7 +17,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
-		<kernel.version>1.3.0-beta.1</kernel.version>
+		<kernel.version>1.3.0-SNAPSHOT</kernel.version>
+		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -34,7 +35,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.3.0-beta.1</version>
+				<version>${kernel.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -87,7 +88,7 @@
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-authcodeflowproxy-api</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>${kernel.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.mosip.kernel</groupId>
@@ -98,7 +99,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-dataaccess-hibernate</artifactId>
-			<version>${kernel.version}</version>
+			<version>${kernel.core.version}</version>
 		</dependency>
 		<dependency>
 	      <groupId>org.springframework.boot</groupId>
@@ -135,7 +136,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-idvalidator-rid</artifactId>
-			<version>${kernel.version}</version>
+			<version>${kernel.core.version}</version>
    		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -191,7 +192,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-cbeffutil-api</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>${kernel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.biometric.util</groupId>
