--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -112,7 +112,8 @@
 		<kernel.logger.logback.version>1.3.0-beta.1</kernel.logger.logback.version>
 		<tss.version>0.3.0</tss.version>
 		<kernel.websubclient.api.version>1.3.0-beta.1</kernel.websubclient.api.version>
-		<kernel.version>1.3.0-beta.1</kernel.version>
+		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
+		<kernel.version>1.3.0-SNAPSHOT</kernel.version>
 	</properties>
 
 	<repositories>
@@ -140,7 +141,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.3.0-SNAPSHOT</version>
+				<version>${kernel.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -160,7 +161,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-openid-bridge-api</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>${kernel.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
