MOSIP-35897 - Fixed automation failures
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
+++ b/api-test/src/main/resources/masterdata/SearchMachine/SearchMachine.yml
@@ -494,7 +494,7 @@ SearchMachine:
       endPoint: /v1/masterdata/machines/search
       description: Search for machine details with two sort fields and two descending orders
       role: globalAdmin
-      templateFields: ["languageCode"]
+      templateFields: ["value"]
       restMethod: post
       inputTemplate: masterdata/SearchMachine/searchMachine
       outputTemplate: masterdata/SearchMachine/searchMachineResult
