--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
 			<artifactId>commons-packet-manager</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>${kernel.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.cloud</groupId>
@@ -197,7 +197,7 @@
 		<dependency>
 			<groupId>io.mosip.biometric.util</groupId>
 			<artifactId>biometrics-util</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<version>${kernel.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.fasterxml.jackson.dataformat</groupId>
