--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -83,7 +83,7 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
-		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
+		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.3.0-beta.1</kernel.logger.version>
 		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
 		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
