--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -208,3 +208,21 @@ jobs:
       OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
       GPG_SECRET: ${{ secrets.GPG_SECRET }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+      
+  trivy-scan:
+     needs: 
+        - build-dockers
+        - build-dockers_apitest_masterdata
+        
+     uses: mosip/kattu/.github/workflows/trivy.yml@develop
+     strategy:
+      matrix:
+       include:
+        - SERVICE_NAME: 'admin-service'
+        - SERVICE_NAME: 'hotlist-service'
+        - SERVICE_NAME: 'kernel-masterdata-service'
+        - SERVICE_NAME: 'kernel-syncdata-service'
+
+     with:
+      service_name: ${{ matrix.SERVICE_NAME }}
+      version: $'{{ github.ref_name }}'
