MOSIP-36673 - Updated the zone code for creating registration center
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
+++ b/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
@@ -29,7 +29,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"RBT",
+   "zoneCode":"$ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":"1",
@@ -208,7 +208,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"RBT",
+   "zoneCode":"$ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":null,
@@ -257,7 +257,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"RBT",
+   "zoneCode":"$ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":"-1",
