--- a/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
+++ b/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
@@ -112,12 +112,12 @@ SearchMachineSpec:
       output: '{
 	"data": [{
 	"id": "$IGNORE$",
-	"name": "HP",
+	"name": "$IGNORE$",
 	"brand": "HP",
 	"model": "1234",
 	"machineTypeCode": "$IGNORE$",
 	"minDriverversion": "3.2",
-	"description": "HP brand",
+	"description": "$IGNORE$",
 	"isActive": "$IGNORE$"
 	}]
 }'
