--- a/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
+++ b/api-test/src/main/resources/masterdata/RegistrationCenter/CreateRegistrationCenter.yml
@@ -29,7 +29,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"$ZONE_CODE$",
+   "zoneCode":"$LEAF_ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":"1",
@@ -72,7 +72,7 @@ CreateRegistrationCenter:
     "perKioskProcessTime": "00:15:00",
     "timeZone": "Test Time zone",
     "workingHours": "8:00:00",
-    "zoneCode":"$ZONE_CODE$",
+    "zoneCode":"$LEAF_ZONE_CODE$",
     "id": "96874",
     "exceptionHolidayDate": "2020-11-16",
     "exceptionHolidayName": "TestHoliday",
@@ -118,7 +118,7 @@ CreateRegistrationCenter:
     "perKioskProcessTime": "00:15:00",
     "timeZone": "Test Time zone",
     "workingHours": "8:00:00",
-    "zoneCode":"$ZONE_CODE$",
+    "zoneCode":"$LEAF_ZONE_CODE$",
     "id": "96874",
     "exceptionHolidayDate": "2020-11-16",
     "exceptionHolidayName": "TestHoliday",
@@ -163,7 +163,7 @@ CreateRegistrationCenter:
     "perKioskProcessTime": "00:15:00",
     "timeZone": "Test Time zone",
     "workingHours": "8:00:00",
-    "zoneCode":"$ZONE_CODE$",
+    "zoneCode":"$LEAF_ZONE_CODE$",
     "id": "96874",
     "exceptionHolidayDate": "2020-11-16",
     "exceptionHolidayName": "TestHoliday",
@@ -208,7 +208,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"$ZONE_CODE$",
+   "zoneCode":"$LEAF_ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":null,
@@ -257,7 +257,7 @@ CreateRegistrationCenter:
    "perKioskProcessTime":"00:30:00",
    "timeZone":"(GTM+01:00) CENTRAL EUROPEAN TIME",
    "workingHours":3.5,
-   "zoneCode":"$ZONE_CODE$",
+   "zoneCode":"$LEAF_ZONE_CODE$",
    "id":"",
    "isActive":"false",
    "numberOfKiosks":"-1",
