--- a/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
+++ b/api-test/src/main/resources/masterdata/SearchMachineSpec/SearchMachineSpec.yml
@@ -86,7 +86,7 @@ SearchMachineSpec:
       uniqueIdentifier: TC_Masterdata_SearchMachineSpec_03
       description: Search for machine spec details with condition column as model
       role: admin
-      templateFields: ["description"]
+      templateFields: []
       restMethod: post
       inputTemplate: masterdata/SearchMachineSpec/searchMachineSpec
       outputTemplate: masterdata/SearchMachineSpec/searchMachineSpecResult
@@ -117,6 +117,7 @@ SearchMachineSpec:
 	"model": "1234",
 	"machineTypeCode": "$IGNORE$",
 	"minDriverversion": "3.2",
+	"description": "$IGNORE$",
 	"isActive": "$IGNORE$"
 	}]
 }'
