--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.hotlist</groupId>
 	<artifactId>hotlist-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
      <url>https://github.com/mosip/admin-services</url>
@@ -31,7 +31,7 @@
 		<kernel.bom.version>1.3.0-beta.1</kernel.bom.version>
 		<kernel-websubclient-api.version>1.3.0-beta.1</kernel-websubclient-api.version>
 		<kernel-logger-logback.version>1.3.0-beta.1</kernel-logger-logback.version>
-		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
+		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 	</properties>
 
 	<repositories>
