--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -7,7 +7,7 @@
 	<name>kernel-syncdata-service</name>
 	<description>Mosip commons project </description>
         <url>https://github.com/mosip/commons</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.1</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -85,7 +85,7 @@
 		<kernel.core.version>1.3.0-beta.1</kernel.core.version>
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.3.0-beta.1</kernel.logger.version>
-		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
+		<kernel.crypto.version>1.3.0-beta.1</kernel.crypto.version>
 		<kernel.keymanager.version>1.3.0-beta.1</kernel.keymanager.version>
 		<kernel-websubclient-api.version>1.3.0-beta.1</kernel-websubclient-api.version>
 	</properties>
