--- a/deploy/admin-apitestrig/values.yaml
+++ b/deploy/admin-apitestrig/values.yaml
@@ -2,6 +2,6 @@ modules:
   masterdata:
     enabled: true
     image:
-      repository: mosipqa/apitest-masterdata
-      tag: develop
+      repository: mosipid/apitest-masterdata
+      tag: 1.3.0-beta.1
       pullPolicy: Always
