--- a/helm/admin-hotlist/Chart.yaml
+++ b/helm/admin-hotlist/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: admin-hotlist
 description: A Helm chart for MOSIP Admin Hotlist
 type: application
-version: 1.3.0-beta.1
+version: 1.3.0-beta.1-develop
 appVersion: ""
 dependencies:
   - name: common
