updated doctype and doccode validators
Signed-off-by: Balaji <74903654+balaji-alluru@users.noreply.github.com>

--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -6,6 +6,7 @@ auth.server.user-add-password-url=https://api-internal.dev.mosip.io/v1/authmanag
 mosip.kernel.config.server.file.storage.uri=https://qa3.mosip.net/config/print/mz/qa3-1.1.5/
 mosip.admin.identityMappingJson=identity-mapping.json
 mosip.admin.applicant-details.exposed-identity-fields=dob,applicantPhoto
+mosip.admin.doccodes-cleanup.fixed-rate=24
 RETRIEVE_IDENTITY_API=https://api-internal.dev1.mosip.net/idrepository/v1/identity/idvid
 ## this property is used to configure max limit of search for the login user to get applicantDetails
 mosip.admin.applicant-details.max.login.count=30
