--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -10,6 +10,7 @@ spring.batch.initializer.enabled=false
 mosip.admin-appid=admin
 mosip.admin-otp-context=auth-otp
 mosip.admin-userid-otp-type=USERID
+mosip.admin.doccodes-cleanup.fixed-rate=24
 
 #-----------------UINActive/Deactive--------------------------------- 
 mosip.admin.uinmgmt.uin-detail-search=http://localhost:8080/idrepository/v1/identity/uin/{uin}
