--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -83,6 +83,8 @@
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
+		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
+		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 		<!-- spring -->
 		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
 
@@ -402,18 +404,45 @@
                 	</configuration>
                </plugin>
 				<plugin>
-				 	 <groupId>org.sonatype.plugins</groupId>
-				 	 <artifactId>nexus-staging-maven-plugin</artifactId>
-				  	 <version>1.6.14</version>
-				  	 <extensions>true</extensions>
-				  	 <configuration>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven.deploy.plugin.version}</version>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+					<executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>none</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+							<configuration>
+								<skip>true</skip>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>${nexus.staging.maven.plugin.version}</version>
+					<extensions>true</extensions>
+					<executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>none</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
 						<serverId>ossrh</serverId>
 						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 						<autoReleaseAfterClose>false</autoReleaseAfterClose>
-				  	</configuration>
+					</configuration>
 				</plugin>
-
-		 		<plugin>
+				<plugin>
 				  	<groupId>org.apache.maven.plugins</groupId>
 				  	<artifactId>maven-source-plugin</artifactId>
 				  	<version>2.2.1</version>
