--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -25,6 +25,8 @@
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
 		<spring.boot.version>3.2.3</spring.boot.version>
+		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
+		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
 
 		<!-- data -->
 		<h2.version>1.4.197</h2.version>
@@ -366,8 +368,46 @@
                         </execution>
                   </executions>
                 </plugin>
-
-              <plugin>
+	<plugin>
+		<artifactId>maven-deploy-plugin</artifactId>
+		<version>${maven.deploy.plugin.version}</version>
+		<configuration>
+			<skip>true</skip>
+		</configuration>
+		<executions>
+			<execution>
+				<id>default-deploy</id>
+				<phase>none</phase>
+				<goals>
+					<goal>deploy</goal>
+				</goals>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</execution>
+		</executions>
+	</plugin>
+	<plugin>
+		<groupId>org.sonatype.plugins</groupId>
+		<artifactId>nexus-staging-maven-plugin</artifactId>
+		<version>${nexus.staging.maven.plugin.version}</version>
+		<extensions>true</extensions>
+		<executions>
+			<execution>
+				<id>default-deploy</id>
+				<phase>none</phase>
+				<goals>
+					<goal>deploy</goal>
+				</goals>
+			</execution>
+		</executions>
+		<configuration>
+			<serverId>ossrh</serverId>
+			<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+			<autoReleaseAfterClose>false</autoReleaseAfterClose>
+		</configuration>
+	</plugin>
+	<plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-javadoc-plugin</artifactId>
                   <version>${maven.javadoc.version}</version>
