--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -38,6 +38,7 @@ auth.server.admin.offline.token.validate=false
 aplication.configuration.level.version=1.1.5
 mosip.optional-languages=
 mosip.mandatory-languages=eng
+mosip.supported-languages=eng,ara,fra,tam,hin,kan
 auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 
