--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -56,15 +56,19 @@ jobs:
           - SERVICE_LOCATION: 'admin/admin-service'
             SERVICE_NAME: 'admin-service'
             BUILD_ARTIFACT: 'admin'
+            SQUASH_LAYERS: '10'
           - SERVICE_LOCATION: 'admin/hotlist-service'
             SERVICE_NAME: 'hotlist-service'
             BUILD_ARTIFACT: 'admin'
+            SQUASH_LAYERS: '10'
           - SERVICE_LOCATION: 'admin/kernel-masterdata-service'
             SERVICE_NAME: 'kernel-masterdata-service'
             BUILD_ARTIFACT: 'admin'
+            SQUASH_LAYERS: '10'
           - SERVICE_LOCATION: 'admin/kernel-syncdata-service'
             SERVICE_NAME: 'kernel-syncdata-service'
             BUILD_ARTIFACT: 'admin'
+            SQUASH_LAYERS: '10'
       fail-fast: false
     name: ${{ matrix.SERVICE_NAME }}
     uses: mosip/kattu/.github/workflows/docker-build.yml@master-java21
@@ -72,6 +76,7 @@ jobs:
       SERVICE_LOCATION: ${{ matrix.SERVICE_LOCATION }}
       SERVICE_NAME: ${{ matrix.SERVICE_NAME }}
       BUILD_ARTIFACT: ${{ matrix.BUILD_ARTIFACT }}
+      SQUASH_LAYERS: ${{ matrix.SQUASH_LAYERS }}
     secrets:
       DEV_NAMESPACE_DOCKER_HUB: ${{ secrets.DEV_NAMESPACE_DOCKER_HUB }}
       ACTOR_DOCKER_HUB: ${{ secrets.ACTOR_DOCKER_HUB }}
