--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -221,6 +221,12 @@
 			<artifactId>bcutil-jdk18on</artifactId>
 			<version>1.78.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
 		<!--<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
